--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -11,8 +11,8 @@
 	{{form.csrf_token}}
 
   	{#Add the file upload field as you learnt for Flask-WTF#}
-  	{{form.image.label}}
-  	{{form.image(class="form-area")}}
+  	{{form.upload.label}}
+  	{{form.upload(class="form-area")}}
 
   <button type="submit" name="submit" class="btn btn-primary">Upload file</button>
 </form>
