--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,16 @@
 body {
     padding-top: 5rem;
 }
+
+.grid{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-auto-flow: row;
+	width: 100%;
+	grid-gap: 8%;
+}
+
+.uimg{
+	max-width: 500px;
+	max-height: 500px;
+}
