--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -3,17 +3,17 @@
 {% block main %}
 <h1 class="page-header">File Upload</h1>
 
-{% include 'flash_messages.html' %}
-
 {# Add the appropriate method and enctype attributes to the form tag to allow for file uploads #}
 <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
-
+	
+	{% include 'flash_messages.html' %}
 	{{form.csrf_token}}
-
+	<div class="up">
   	{#Add the file upload field as you learnt for Flask-WTF#}
-  	{{form.upload.label}}
-  	{{form.upload(class="form-area")}}
+  		{{form.upload.label}}
+  		{{form.upload(class="form-area")}}
+	</div>
+  	<button type="submit" name="submit" class="btn btn-primary">Upload file</button>
 
-  <button type="submit" name="submit" class="btn btn-primary">Upload file</button>
 </form>
 {% endblock %}
