--- a/app/templates/files.html
+++ b/app/templates/files.html
@@ -2,8 +2,9 @@
 
 {% block main %}
 	<div class="grid">
-		{
-		<img src="{{url_for('get_image', filename=filename)}}" class="uimg" />
+			{%for i in images %}
+				<img src="{{url_for('get_image', filename="" + i)}}" />
+			{%endfor%}
 	</div>
 {% endblock %}
 
